...
                    android:contentDescription="@string/close"
                    android:paddingStart="@dimen/keyline_4"
                    android:paddingEnd="@dimen/keyline_4"
                    android:paddingBottom="@dimen/keyline_4"
                    android:src="@drawable/ic_x"
                    app:tint="@color/bottomsheet_close_button_color"
                    app:layout_constraintBottom_toTopOf="@+id/txtTitle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />

                <TextView
                    android:id="@+id/txtDate"
                    formatDateEnd="@{model.selectedSession.endTimeLocal}"
                    formatDateStart="@{model.selectedSession.startTimeLocal}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/keyline_5"
                    app:layout_constraintStart_toStartOf="parent"
...
                    android:visibility="invisible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/measurements_table">

                    <com.github.mikephil.charting.charts.LineChart
                        android:id="@+id/chart_view"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
...
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintTop_toBottomOf="@+id/chart_container"
                    app:selectionRequired="true"
                    app:singleSelection="true">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/mapChip"
                        style="@style/Widget.Aircasting.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/map_button"
                        app:layout_constraintEnd_toEndOf="parent" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chartChip"
                        style="@style/Widget.Aircasting.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chart"
                        app:layout_constraintEnd_toEndOf="parent" />

                </com.google.android.material.chip.ChipGroup>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/followBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/keyline_2"
                    android:text="@string/follow_session"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="parent"
...
