...
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="@+id/layoutContainer"
            app:layout_constraintTop_toBottomOf="@+id/layoutContainer" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroupFirstLevel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/keyline_7"
            android:layout_marginTop="@dimen/keyline_5"
            android:layout_marginEnd="@dimen/keyline_7"
            app:layout_constraintEnd_toEndOf="parent"
...
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/particulate_matter"
                app:layout_constraintEnd_toEndOf="parent" />

            <com.google.android.material.chip.Chip
                android:id="@+id/ozone_chip"
                style="@style/Widget.Aircasting.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ozone"
                app:layout_constraintEnd_toEndOf="parent" />

...
            android:text="@string/which_sensor_are_you_interested_in"
            android:textAppearance="@style/TextAppearance.Aircasting.Body1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chipGroupFirstLevel" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroupSecondLevelOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/keyline_7"
            android:layout_marginTop="@dimen/keyline_5"
            android:layout_marginEnd="@dimen/keyline_7"
            app:layout_constraintEnd_toEndOf="parent"
...
                android:text="@string/purpleair"
                app:layout_constraintEnd_toStartOf="@id/ozone_chip" />

        </com.google.android.material.chip.ChipGroup>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroupSecondLevelTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/keyline_7"
            android:layout_marginTop="@dimen/keyline_5"
            android:layout_marginEnd="@dimen/keyline_7"
            android:visibility="invisible"
...
                android:checked="true"
                android:text="@string/openaq"
                app:layout_constraintEnd_toEndOf="parent" />
        </com.google.android.material.chip.ChipGroup>

        <Button
            android:id="@+id/btnContinue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/keyline_7"
            android:layout_marginEnd="@dimen/keyline_7"
            android:layout_marginBottom="@dimen/keyline_5"
            android:text="@string/continue_button_onboarding"
...
