...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutContainer">

            <TextView
                android:id="@+id/txtShowing"
                style="@style/TextAppearance.Aircasting.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/keyline_5"
                android:layout_marginTop="@dimen/keyline_2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Results for: particular matter" />

            <TextView
                android:id="@+id/txtUsing"
                style="@style/TextAppearance.Aircasting.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/keyline_2"
                android:layout_marginEnd="@dimen/keyline_5"
                app:layout_constraintEnd_toEndOf="parent"
...
                    app:iconGravity="end"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txtShowingSessionsNumber"
                    style="@style/TextAppearance.Aircasting.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/keyline_3"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toTopOf="@+id/recyclerFixedFollow"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:text="Sessions showing 9 of 9 results"
                    tools:visibility="visible" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerFixedFollow"
...
